Dodan dijagram aktivnosti

--- a/Dokumentacija/Arhitektura.tex
+++ b/Dokumentacija/Arhitektura.tex
@@ -245,6 +245,19 @@ Navedeni je entitet u vezi \emph{One-to-One} s entitetom Korisnik preko atributa
 \newpage
 \section{dijagram stanja}
 \section{dijagram aktivnosti}
+
+\paragraph{}
+{Na dijagramu aktivnosti 4.7. prikazan je proces kreiranja rezervacije parkinga. Korisnik se prijavi u sustav te na jedan od dva načina kreira rezervaciju. Prvi način je da odabere željeni termin nakon čega mu se na karti prikazuju dostupna parkirališna mjesta u tom terminu između kojih onda odabire. Drugi način je da na karti odabere parkirališna mjesta za koja je zainteresiran, nakon čega mu se otvara kalendar s dostupnim terminima. Nakon toga korisnik odabire između plaćanja u aplikaciji i plaćanja na licu mjesta. Naposljetku mu se prikazuje potvrda rezervacije.
+}
+
+\begin{figure}
+	\centering
+	\includegraphics[width=1\linewidth]{dijagrami/DijagramAktivnosti.png}
+	\caption{Dijagram aktivnosti}
+	\label{fig:activitydiagram}
+	\vfill
+\end{figure}
+
 \section{dijagram komponenti}
 
 
