--- a/Dokumentacija/Dnevnik_promjena_dokumentacije.tex
+++ b/Dokumentacija/Dnevnik_promjena_dokumentacije.tex
@@ -32,6 +32,8 @@
 	0.99 & Ispravak gramatičkih pogrešaka & Ivan Bušljeta, Mario Olčar & 17.11.2023 \\ \hline
 	1.01  & Ispravak dijagrama obrazaca uporabe & Paula Močinić & 17.12.2023 \\ \hline
 	1.02  & Ispravak funkcionalnih zahtjeva i opisa obrazaca uporabe & Paula Močinić & 17.12.2023 \\ \hline
+	1.1  & Dodan dijagram stanja i njegov opis & Paula Močinić & 8.01.2024 \\ \hline
+	1.2  & Dodan zaključak & Paula Močinić & 12.01.2024 \\ \hline
 \end{longtblr}
 
 
