--- a/Dokumentacija/PROGI_2023_LETECI_MEDVJEDICI_v1_0.tex
+++ b/Dokumentacija/PROGI_2023_LETECI_MEDVJEDICI_v1_0.tex
@@ -120,6 +120,7 @@
 		\tableofcontents
 		
 		\include{Dnevnik_promjena_dokumentacije}
+		\include{Dnevnik_sastanaka}
 		\include{Opis_projektnog_zadatka}
 		\include{Specifikacija_programske_potpore}
 		\include{Arhitektura}
