--- a/Dokumentacija/Dnevnik_sastanaka.tex
+++ b/Dokumentacija/Dnevnik_sastanaka.tex
@@ -7,33 +7,27 @@
 	entry=none
 	]{
 		width = \textwidth,
-		colspec={|X[4,l]|X[8, l]|X[4, l]|X[4, l]|},
+		colspec={|X[4,l]|X[8, l]|X[4, l]|},
 		rowhead = 1,
 	} %definicija širine tablice, širine stupaca, poravnanje i broja redaka naslova tablice
 	\hline
-	\textbf{Rev.} & \textbf{Opis promjene/dodatka}	&  	\textbf{Autori}  & \textbf{Datum}	\\ \hline
-	0.01 & Napravljen predložak & Mario Olčar  & 22.10.2023 \\ \hline
-	0.10 & Dodan opis zadatka & Mario Olčar & 29.10.2023 \\ \hline
-	0.19 & Dodani opisi obrazaca uporabe & Paula Močinić & 8.11.2023 \\ \hline
-	0.28 & Dodani dijagrami obrazaca uporabe & Paula Močinić  & 8.11.2023 \\ \hline
+	\textbf{Datum sastanka} & \textbf{Opis}  	\textbf{Voditelj}\\ \hline
+	2.11.2023 & Prvi uvodni sastanak za početak rada & Mario Olčar\\ \hline
+	7.11.2023 & sastanak  & Mario Olčar\\ \hline
+	11.11.2023 & backend sastanak & Matija Huđin\\ \hline
+	10.12.2023 & sastanak & Mario Olčar\\ \hline
 	
-	0.37 & Dodani sekvencijski dijagrami i njihovi opisi & Paula Močinić  & 9.11.2023 \\ \hline
-	0.46 & Stvorena mapa sa slikama dijagrama & Paula Močinić  & 12.11.2023 \\ \hline
-	0.55 & Dodani ostali zahtjevi & Paula Močinić  & 13.11.2023 \\ \hline
-	0.61 & Dodani funkcijski zahtjevi & Ivan Bušljeta  & 15.11.2023 \\ \hline
+	17.12.2023 & sastanak & Mario Olčar\\ \hline
 	
-	0.70 & Dodan ER dijagram & Lovro De Villa  & 15.11.2023 \\ \hline
-	0.79 & Dodan opis arhitekture i dizajna sustava & Lovro De Villa  & 16.11.2023 \\ \hline
-	0.75 & Dodan opis baze podataka i tablice & Tomislav Marenić  & 16.11.2023 \\ \hline
-	0.79 & Dodan opis arhitekture i dizajna sustava & Lovro De Villa  & 16.11.2023 \\ \hline
-	0.80 & Ispravak pogreške, dodan dijagram modela i njegov opis & Tomislav Marenić  & 17.11.2023 \\ \hline
-	0.88 & Dodan dijagram DTO i njegov opis & Ivan Bušljeta & 17.11.2023 \\ \hline
-	0.89 & Dodan dijagram kontrolera i njegov opis & Lovro De Villa & 17.11.2023 \\ \hline
-	0.99 & Ispravak gramatičkih pogrešaka & Ivan Bušljeta, Mario Olčar & 17.11.2023 \\ \hline
-	1.01  & Ispravak dijagrama obrazaca uporabe & Paula Močinić & 17.12.2023 \\ \hline
-	1.02  & Ispravak funkcionalnih zahtjeva i opisa obrazaca uporabe & Paula Močinić & 17.12.2023 \\ \hline
-	1.1  & Dodan dijagram stanja i njegov opis & Paula Močinić & 8.01.2024 \\ \hline
-	1.2  & Dodan zaključak & Paula Močinić & 12.01.2024 \\ \hline
+	18.12.2023 & backend sastanak & Matija Huđin\\ \hline
+	
+	20.12.2023 & backend sastanak & Matija Huđin\\ \hline
+	27.12.2023 & sastanak & Mario Olčar \\ \hline
+	8.1.2023 & sastanak & Mario Olčar\\ \hline
+	15.1.2023 & sastanak & Mario Olčar\\ \hline
+	
+	
+	
 \end{longtblr}
 
 
