dodan dijagram komponenti i opis istog

--- a/Dokumentacija/Arhitektura.tex
+++ b/Dokumentacija/Arhitektura.tex
@@ -264,5 +264,18 @@ Navedeni je entitet u vezi \emph{One-to-One} s entitetom Korisnik preko atributa
 
 \section{dijagram komponenti}
 
+\paragraph{}
+{Na dijagramu komponenti 5.7. prikazan je  vizualni prikaz arhitekture sustava kroz identifikaciju ključnih komponenata i njihovih međusobnih veza. Ovaj dijagram jasno prikazuje fizičke ili logičke module, njihove sučelja te način kako komponente surađuju radi ostvarenja funkcionalnosti sustava. Sustavu se pristupa preko dva različita sučelja. Preko \emph{frontend} dijela aplikacije poslužuju se sve HTML, CSS i TYPESCRIPT datoteke. \emph{Frontend} dio aplikacije ima i sučelje za slanje JSON datoteka aplikaciji preko REST API komponente, koja dalje te podatke poslužujen \emph{beckend} dijelu aplikacije. Pomoću EntityFrameworkCore komponente aplikacija pristupa podatcima iz baze podataka, a ti pristigli podatci se šalju u obliku DTO \emph{(Data transfer object)}.
+}
+
+\begin{figure}[h!]
+	\centering
+	\includegraphics[width=1\linewidth]{dijagrami/DijagramKomponenti.png}
+	\caption{Dijagram komponenti}
+	\label{fig:componentdiagram}
+	\vfill
+\end{figure}
+
+\FloatBarrier
 
 \eject 
