--- a/Dokumentacija/Dnevnik_sastanaka.tex
+++ b/Dokumentacija/Dnevnik_sastanaka.tex
@@ -11,7 +11,7 @@
 		rowhead = 1,
 	} %definicija širine tablice, širine stupaca, poravnanje i broja redaka naslova tablice
 	\hline
-	\textbf{Datum sastanka} & \textbf{Opis}  	\textbf{Voditelj}\\ \hline
+	\textbf{Datum sastanka} & \textbf{Opis}  &	\textbf{Voditelj}\\ \hline
 	2.11.2023 & Prvi uvodni sastanak za početak rada & Mario Olčar\\ \hline
 	7.11.2023 & sastanak  & Mario Olčar\\ \hline
 	11.11.2023 & backend sastanak & Matija Huđin\\ \hline
