--- a/Dokumentacija/Arhitektura.tex
+++ b/Dokumentacija/Arhitektura.tex
@@ -245,6 +245,18 @@ Navedeni je entitet u vezi \emph{One-to-One} s entitetom Korisnik preko atributa
 
 \newpage
 \section{dijagram stanja}
+
+\paragraph{}{
+Dijagram stanja za aplikaciju SpotPicker prikazuje moguća stanja korisnika i sustava te prijelaze između tih stanja na temelju različitih događaja. Na slici 4.6 prikazan je dijagram stanja za registriranog korisnika. Nakon uspješne prijave u aplikaciju, registriranom korisniku se prikazuje početna stranica koja omogućuje pregled dostupnih parkirališta. Korisnik ima mogućnost pregleda informacija o svakom parkiralištu, njegovoj zauzetosti, te vrsti vozila koje se može parkirati. Za odabrano parkiralište korisnik može provjeriti informacije o cijenama, trajanju parkinga te dostupnim terminima za rezervaciju parkirališnih mjesta. Korisniku je omogućeno nadopunjavanje novčanika putem aplikacije radi plaćanja rezervacija ili uplate parkinga prilikom dolaska na lokaciju slobodnog parkirališnog mjesta.
+}
+
+\begin{figure}[h!]
+	\centering
+	\includegraphics[width=1\linewidth]{dijagrami/STM - Registrirani korisnik.jpg}
+	\caption{Dijagram stanja}
+	\label{fig:activitydiagram}
+	\vfill
+\end{figure}
 \FloatBarrier
 \section{dijagram aktivnosti}
 
