--- a/Dokumentacija/Dnevnik_sastanaka.tex
+++ b/Dokumentacija/Dnevnik_sastanaka.tex
@@ -7,15 +7,15 @@
 	entry=none
 	]{
 		width = \textwidth,
-		colspec={|X[4,l]|X[8, l]|X[4, l]|},
+		colspec={|X[4,2]|X[8, 2]|X[4, 2]|},
 		rowhead = 1,
 	} %definicija širine tablice, širine stupaca, poravnanje i broja redaka naslova tablice
 	\hline
 	\textbf{Datum sastanka} & \textbf{Opis}  &	\textbf{Voditelj}\\ \hline
-	2.11.2023 & Prvi uvodni sastanak za početak rada & Mario Olčar\\ \hline
-	7.11.2023 & sastanak  & Mario Olčar\\ \hline
+	2.11.2023 & Prvi uvodni sastanak za početak rada, raspodjela poslova i obaveza & Mario Olčar\\ \hline
+	7.11.2023 & izvještaji  o napretku & Mario Olčar\\ \hline
 	11.11.2023 & backend sastanak & Matija Huđin\\ \hline
-	10.12.2023 & sastanak & Mario Olčar\\ \hline
+	10.12.2023 & stvari koje ćemo raditi nakon međuispita i analiza dokumentacije nakon predaje za drugi ciklus & Mario Olčar\\ \hline
 	
 	17.12.2023 & sastanak & Mario Olčar\\ \hline
 	
