Dodana tablica aktivnosti

--- a/Dokumentacija/Implementacija.tex
+++ b/Dokumentacija/Implementacija.tex
@@ -3,14 +3,14 @@
 \section{Korištene tehnologije i alati}
 
 \paragraph{}
-{Komunikacija u timu realizirana je korištenjem aplikacije WhatsApp1. Za izradu UML dijagrama korišten je alat Astah Professional2, a kao sustav za upravljanje izvornim kodom Git3. Udaljeni repozitorij projekta dostupan je na web platformi GitHub.
+{Komunikacija u timu realizirana je korištenjem aplikacije WhatsApp \footnote{\url{https://https://www.whatsapp.com/}}. Za izradu UML dijagrama korišten je alat Astah Professional\footnote{\url{https://astah.net/products/astah-professional/}}, a kao sustav za upravljanje izvornim kodom Git\footnote{\url{https://git-scm.com/}}. Udaljeni repozitorij projekta dostupan je na web platformi GitHub\footnote{\url{https://github.com/}}.
 }
 \paragraph{}{
-Kao razvojno okruženje korišten je Microsoft Visual Studio5 - integrirano je razvojno sučelje (IDE) tvrtke Microsoft. Prvenstveno se koristi za razvoj računalnih programa za operacijski sustav Windows, kao i za web-stranice, web-aplikacije, web-usluge i mobilne aplikacije. Visual Studio za razvoj softvera koristi Microsoftove platforme kao što su windows API, Windows Forms, Windows Presentation Foundation, Windows Store i Microsoft Silverlight.
+Kao razvojno okruženje korišten je Microsoft Visual Studio \footnote{\url{https://visualstudio.microsoft.com/}}- integrirano je razvojno sučelje (IDE) tvrtke Microsoft. Prvenstveno se koristi za razvoj računalnih programa za operacijski sustav Windows, kao i za web-stranice, web-aplikacije, web-usluge i mobilne aplikacije. Visual Studio za razvoj softvera koristi Microsoftove platforme kao što su windows API, Windows Forms, Windows Presentation Foundation, Windows Store i Microsoft Silverlight.
 }
 \paragraph{}{
-Aplikacija je napisana koristeći radni okvir* jezik C\#6 za izradu backenda te React7 i jezik JavaScript za izradu frontenda. React, također poznat kao React.js je biblioteka u JavaScriptu za izgradnju korisničkih sučelja. Održana je od strane Facebooka. React se najčešće koristi kao osnova u razvoju web ili mobilnih aplikacija. Složene aplikacije u Reactu obično zahtijevaju korištenje dodatnih biblioteka za interakciju s API-jem. Radni okvir Baza podataka se nalazi na poslužitelju u oblaku Microsoft Azure.
-}
+Aplikacija je napisana koristeći radni okvir jezik C\# \footnote{\url{https://learn.microsoft.com/en-us/dotnet/csharp/tour-of-csharp/}} za izradu backenda te React \footnote{\url{https://react.dev/}} i jezik JavaScript za izradu frontenda. React, također poznat kao React.js je biblioteka u JavaScriptu za izgradnju korisničkih sučelja. Održana je od strane Facebooka. React se najčešće koristi kao osnova u razvoju web ili mobilnih aplikacija. Složene aplikacije u Reactu obično zahtijevaju korištenje dodatnih biblioteka za interakciju s API-jem. Radni okvir Baza podataka se nalazi na poslužitelju u oblaku Microsoft Azure \footnote{\url{https://azure.microsoft.com/en-us}}.
+}	
 
 
 
