--- a/Dokumentacija/PROGI_2023_LETECI_MEDVJEDICI_v1_0.tex
+++ b/Dokumentacija/PROGI_2023_LETECI_MEDVJEDICI_v1_0.tex
@@ -127,7 +127,7 @@
 		\include{Implementacija}
 		\include{Zakljucak}
 		\include{Literatura}
-		
+		\include{Tablica aktivnosti}
 		
 		\begingroup
 		\renewcommand*\listfigurename{Indeks slika i dijagrama}
