--- a/Dokumentacija/Dnevnik_promjena_dokumentacije.tex
+++ b/Dokumentacija/Dnevnik_promjena_dokumentacije.tex
@@ -32,8 +32,11 @@
 	0.99 & Ispravak gramatičkih pogrešaka & Ivan Bušljeta, Mario Olčar & 17.11.2023 \\ \hline
 	1.01  & Ispravak dijagrama obrazaca uporabe & Paula Močinić & 17.12.2023 \\ \hline
 	1.02  & Ispravak funkcionalnih zahtjeva i opisa obrazaca uporabe & Paula Močinić & 17.12.2023 \\ \hline
-	1.1  & Dodan dijagram stanja i njegov opis & Paula Močinić & 8.01.2024 \\ \hline
-	1.2  & Dodan zaključak & Paula Močinić & 12.01.2024 \\ \hline
+	1.1  & Dodan dijagram stanja i njegov opis & Paula Močinić & 8.1.2024 \\ \hline
+	1.2  & Dodane Korištene tehnologije i alati & Mario Olčar & 8.1.2024 \\ \hline
+	1.3  & Dodan dijagram aktivnosti & Ivan Bušljeta & 8.1.2024 \\ \hline
+	1.5  & Dodan zaključak & Paula Močinić & 12.01.2024 \\ \hline
+	2.0  & Predaja druge revizije & Mario Olčar & 19.01.2024 \\ \hline
 \end{longtblr}
 
 
