--- a/Dokumentacija/Implementacija.tex
+++ b/Dokumentacija/Implementacija.tex
@@ -33,7 +33,7 @@ Naš se sustav bazira na ”klijent – posluzitelj” arhitekturi, te se komuni
 	\label{fig:modelsdiagram}
 \end{figure}
 
-\section{upute za puštanje u pogon}
+\section{Upute za puštanje u pogon}
 
 
 \eject
