--- a/Dokumentacija/PROGI_2023_LETECI_MEDVJEDICI_v1_0.tex
+++ b/Dokumentacija/PROGI_2023_LETECI_MEDVJEDICI_v1_0.tex
@@ -126,6 +126,7 @@
 		\include{Arhitektura}
 		\include{Implementacija}
 		\include{Zakljucak}
+		\include{Popis literature}
 		\include{Literatura}
 		\include{Tablica aktivnosti}
 		
