--- a/Dokumentacija/Implementacija.tex
+++ b/Dokumentacija/Implementacija.tex
@@ -35,5 +35,13 @@ Naš se sustav bazira na ”klijent – posluzitelj” arhitekturi, te se komuni
 
 \section{Upute za puštanje u pogon}
 
+\subsection{Pokretanje backend dijela aplikacije}
+
+\paragraph{}{
+}
+
+
+
+
 
 \eject
