--- a/Dokumentacija/Zakljucak.tex
+++ b/Dokumentacija/Zakljucak.tex
@@ -9,4 +9,4 @@ Jedan od ključnih aspekata našeg projekta je briga o korisničkom iskustvu. Kr
 	
 U budućnosti, mogli bismo proširiti funkcionalnosti aplikacije dodavanjem mobilne aplikacije, omogućujući korisnicima veću fleksibilnost i dostupnost. Također, kontinuirano ažuriranje sustava i praćenje povratnih informacija korisnika bit će ključno za održavanje i unaprjeđenje kvalitete aplikacije.
 	
-Sudjelovanje u ovom projektu pružilo nam je dragocjeno iskustvo suradnje u timu, rješavanja izazova te primjene stečenih znanja u praksi. Unatoč mogućnostima za usavršavanje, ponosni smo na postignuće i funkcionalnost SpotPicker aplikacije koja odražava naš trud i angažman u realizaciji ovog projekta.}
+Suradnja u timu često može biti izazovna, ali smo kroz ovaj projekt naučili kako pravilno komunicirati, dijeliti zadatke i usklađivati različite perspektive. Osim toga, rješavanje izazova koji su se pojavili tokom projekta omogućilo nam je razvijanje kreativnih i analitičkih vještina.}
