--- a/Dokumentacija/Dodatak.tex
+++ b/Dokumentacija/Dodatak.tex
@@ -41,9 +41,9 @@
 	Popis literature 			& 1 &  &  &  &  &  &  \\  
 	&  &  &  &  &  &  &  \\ \hline 
 	\textit{Dodatne stavke kako ste podijelili izradu aplikacije} 			&  &  &  &  &  &  &  \\ 
-	\textit{npr. izrada početne stranice} 				&  & 12 &  & 0 &  &  &  \\  
-	\textit{izrada baze podataka} 		 			&  &  &  & 0  & 3 & 5 & 7\\  
-	\textit{spajanje s bazom podataka} 							&  & 2 &  & 0 &  &  & 3 \\ 
+	\textit{npr. izrada početne stranice} 				&  & 12 &  &  &  &  &  \\  
+	\textit{izrada baze podataka} 		 			&  &  &  &   & 3 & 5 & 7\\  
+	\textit{spajanje s bazom podataka} 							&  & 2 &  &  &  &  & 3 \\ 
 	\textit{back end} 							& 4 &  &  &  & 4 & 7 & 8 \\  
 	&  &  &  &  &  &  &\\ 
 \end{longtblr}
