--- a/Dokumentacija/Implementacija.tex
+++ b/Dokumentacija/Implementacija.tex
@@ -35,12 +35,11 @@ Naš se sustav bazira na ”klijent – posluzitelj” arhitekturi, te se komuni
 
 \section{Upute za puštanje u pogon}
 
-\subsection{Pokretanje backend dijela aplikacije}
+\subsection{Instalacija poslužitelja baze podataka}
 
 \paragraph{}{
-
+	Pokretanje baze podataka radili smo unutar razvojnog okruzenja Microsoft Visual Studio. Pokretanjem debug procesa 
 }
-
 
 
 
